fixed bug in globals.scss cause too longer compiled css

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -26,9 +26,3 @@ $hotpotTextHeight: 1.25rem;
 $minButtonHeight: 1.25rem;
 $minButtonWidth: 80px;
 
-:exports{
-    imperialBlue:$primaryImperialBlue;
-    secondaryGreen:$secondaryGreen;
-    secondaryOrange:$hotspotButtonColor;
-}
-
